--- a/app/auth/register.html
+++ b/app/auth/register.html
@@ -1,20 +1,21 @@
 <div class="page-wrapper">
 
   <div class="page-header">
-    <h1><a ui-sref="home"><img class="logo-img" src="images/logo.png" /></a> Register</h1>
+    <h1><a ui-sref="home"><img class="logo-img" src="images/logo.png" /></a> Log In</h1>
   </div>
 
-  <div ng-show="$ctrl.error">
-    <span ng-bind="$ctrl.error.message"></span>
+  <div ng-show="authCtrl.error">
+    <span ng-bind="authCtrl.error.message"></span>
   </div>
-  <form ng-submit="$ctrl.register()">
-    <div class="input-group">
-      <input type="email" class="form-control" placeholder="Email" ng-model="$ctrl.user.email">
-    </div>
-    <div class="input-group">
-      <input type="password" class="form-control" placeholder="Password" ng-model="$ctrl.user.password">
-    </div>
-    <input type="submit" class="btn btn-default" value="Register">
-  </form>
+  
+  <form ng-submit="authCtrl.register()">
+  <div class="input-group">
+    <input type="email" class="form-control" placeholder="Email" ng-model="authCtrl.user.email">
+  </div>
+  <div class="input-group">
+    <input type="password" class="form-control" placeholder="Password" ng-model="authCtrl.user.password">
+  </div>
+  <input type="submit" class="btn btn-default" value="Register">
+</form>
 
 </div>
